# mal

./: .gitignore  Cargo.toml  Makefile.impls  README.md
impls/hare/: printer.ha  reader.ha  step0_repl.ha  step1_read_print.ha  types.ha
impls/hare/steps/: step0_repl.ha
impls/odin/: Makefile  reader.odin  run  step0_repl.odin  step1_read_print.odin  step2_eval.odin  step3_env.odin  step4_if_fn_do.odin  step5_tco.odin  step6_file.odin  step7_quote.odin  step8_macros.odin  step9_try.odin  stepA_mal.odin
impls/odin/core/: core.odin
impls/odin/env/: env.odin
impls/odin/lib/: lib.odin
impls/odin/reader/: printer.odin  reader.odin  types.odin
impls/odin/types/: apply.odin  env.odin  types.odin
impls/rust/: Cargo.toml  Makefile
impls/rust/src/: printer.rs  reader.rs  step0_repl.rs  step1_read_print.rs  types.rs
impls/tests/: step4_if_fn_do.mal
impls/zig/: Makefile  build.zig  printer.zig  reader.zig  step0_repl.zig  step1_read_print.zig
