[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "14.0.0"
nom = "7.1.3"
# Itertools may not be needed if this lands in std:
# https://github.com/rust-lang/rust/issues/79524
itertools = "0.13.0"

[[bin]]
name = "step0_repl"
path = "src/step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "src/step1_read_print.rs"
